--- a/misc-learning/learning-flask/demo-project/static/css/style.css
+++ b/misc-learning/learning-flask/demo-project/static/css/style.css
@@ -1,3 +1,89 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 body {
     background: #f7f7f7;
+    width: 100%;
+    margin: auto; 
+    
+}
+
+.card{
+    width:1000px;
+    height:500px;
+    border-radius: 10px;
+    box-shadow: 0px 20px 30px 3px rgba(0, 0, 0, 0.55); 
+    margin: auto;
+    display: flex;
+    flex-shrink: 0;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+
+
+}
+
+.card_left{
+    width: 35%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.card_left_img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 10px 0px 0px 10px;
+}
+
+.card_right{
+    background-color: black; 
+    width: 65%;
+    border-radius: 0px 10px 10px 0px;
+}
+
+.movie_card_title{
+    color: whitesmoke;
+    font-family: Montserrat, sans-serf;
+    text-transform: capitalize;
+    text-align: center;
+    font-size: 2.5rem;
+    width: 100%;
+    margin-bottom: 0px;
+}
+
+.movie_card_director{
+    font-family: Montserrat, sans-serif;
+    color:whitesmoke; 
+    text-align: center;
+    padding-top: 0;
+
+}
+
+.movie_card_header{
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    font-weight: 800;
+    color: whitesmoke;
+    list-style: none;
+    float: left; 
+    padding-right: 3rem; 
+    padding-left: 5rem;
+    text-align: center;
+}
+
+.movie_card_overview{
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 2.0;
+    color:whitesmoke; 
+    padding-top: 2.5rem; 
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+}
+
+.movie_card_rating{
+    font-family: Arial, Helvetica, sans-serif;
+    color:gold; 
+    text-align: center;
+    font-weight: 800;
+    font-size: 1.5rem;
 }
