Added year search to movie app

--- a/misc-learning/learning-flask/demo-project/templates/base.html
+++ b/misc-learning/learning-flask/demo-project/templates/base.html
@@ -10,5 +10,9 @@
 <body>
     {% block main %}
     {% endblock %}
+
+    <footer class="footer">
+        <p>By Alex Ibrahim for 66 Isabella</p>
+    </footer>
 </body>
 </html>
