--- a/misc-learning/learning-flask/demo-project/static/css/style.css
+++ b/misc-learning/learning-flask/demo-project/static/css/style.css
@@ -7,9 +7,20 @@ body {
     
 }
 
+/*Index Styling */
+
+/* ADD MOVIE STYLING */
+
+.add_movie{
+    display: flex;
+    justify-content: center;
+   
+}
+
+
 .card{
-    width:1000px;
-    height:500px;
+    width:900px;
+    height:450px;
     border-radius: 10px;
     box-shadow: 0px 20px 30px 3px rgba(0, 0, 0, 0.55); 
     margin: auto;
@@ -31,7 +42,7 @@ body {
 .card_left_img{
     height: 100%;
     width: 100%;
-    object-fit: cover;
+    object-fit: fill;
     border-radius: 10px 0px 0px 10px;
 }
 
@@ -46,7 +57,7 @@ body {
     font-family: Montserrat, sans-serf;
     text-transform: capitalize;
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 2.0rem;
     width: 100%;
     margin-bottom: 0px;
 }
@@ -78,12 +89,25 @@ body {
     padding-top: 2.5rem; 
     padding-left: 2.5rem;
     padding-right: 2.5rem;
+    font-size: 14px;
 }
 
 .movie_card_rating{
     font-family: Arial, Helvetica, sans-serif;
     color:gold; 
+    background-color: #707070;
+    border-radius: 5px;
     text-align: center;
+    padding-left: 1rem;
     font-weight: 800;
-    font-size: 1.5rem;
+    font-size: 1.0rem;
+    width:fit-content; 
+    margin: auto;
+}
+
+
+/* Footer */
+
+.footer{
+    margin-top: 1rem;
 }
