"Navigation added to movie demo project"

--- a/misc-learning/learning-flask/demo-project/templates/index.html
+++ b/misc-learning/learning-flask/demo-project/templates/index.html
@@ -22,12 +22,10 @@
 </div>
 
 
-<p>List of Movies</p>
-
    {% for item in all_movies %}
 
    <br>
-   <div class="card">
+   <div class="cardx">
       <div class="card_left">
           <img class="card_left_img" src="/static/images{{ item.poster_path }}" alt="">
       </div>
