--- a/misc-learning/learning-flask/demo-project/static/css/style.css
+++ b/misc-learning/learning-flask/demo-project/static/css/style.css
@@ -1,13 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
 body {
-    background: #f7f7f7;
+    background: #FBFBFB;
     width: 100%;
     margin: auto; 
     
 }
 
 /*Index Styling */
+
+.logo{
+    text-align: center;
+    width: 150px;
+}
+.title_header{
+    width: 100%; 
+    text-align: center;
+    padding-top: 2rem;
+    font-family: Lobster, sans-serif;
+    font-size: 4.5rem;
+    font-weight: 800;
+    color: goldenrod; 
+    text-shadow: 2px 2px black; 
+
+}
+
+.header-p{
+    margin: 0;
+}
+
+
+
 
 /* ADD MOVIE STYLING */
 
@@ -18,19 +42,17 @@ body {
 }
 
 
-.card{
+.cardx{
     width:900px;
     height:450px;
     border-radius: 10px;
     box-shadow: 0px 20px 30px 3px rgba(0, 0, 0, 0.55); 
     margin: auto;
     display: flex;
-    flex-shrink: 0;
+    flex-shrink: 1;
     flex-wrap: wrap;
     margin-top: 2rem;
     margin-bottom: 2rem;
-
-
 }
 
 .card_left{
